# ldf

./: alembic.ini  docker-compose.yaml  pyproject.toml
books/: config.py  ioc.py  main.py
books/application/: dto.py  interactors.py  interfaces.py
books/controllers/: amqp.py  http.py
books/domain/: entities.py
books/infrastructure/: broker.py  database.py  gateways.py
books/infrastructure/migrations/: env.py
books/infrastructure/migrations/versions/: 56e4a501c9f2_create_books_table.py
