[tool.poetry]
name = "ldf"
version = "0.1.0"
description = ""
authors = ["supadrupa <hhugoo11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.30"
faststream = {extras = ["rabbit"], version = "^0.5.12"}
dishka = "^1.2.0"
litestar = "^2.9.0"
uvicorn = "^0.30.1"
alembic = "^1.13.1"
psycopg = {extras = ["binary"], version = "^3.1.19"}
psycopg2-binary = "^2.9.9"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
